--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
-  "name": "online-code-editor",
+  "name": "code-editor-ts",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@codemirror/lang-css": "^6.3.1",
     "@codemirror/lang-html": "^6.4.9",
-    "@codemirror/lang-javascript": "^6.2.3",
-    "@codemirror/theme-one-dark": "^6.1.2",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/theme-one-dark": "^6.1.3",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@uiw/codemirror-theme-github": "^4.23.10",
-    "@uiw/react-codemirror": "^4.23.10",
-    "codemirror": "^6.0.1",
-    "prettier": "^3.5.3",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.126",
+    "@types/prettier": "^2.7.3",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@uiw/react-codemirror": "^4.24.1",
+    "codemirror": "^6.0.2",
+    "prettier": "^3.6.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
-    "react-scripts": "5.0.1",
+    "react-icons": "^4.12.0",
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,5 +49,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   }
 }
